--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>We need your location to provide travel recommendations and enhance your experience.</string>
 	<key>CFBundleDisplayName</key>
 	<string>P</string>
 	<key>CFBundleExecutable</key>
