--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   ionicons: ^0.2.2
   curved_navigation_bar: ^1.0.6
+  google_maps_flutter: ^2.5.3
+  location: ^5.0.3
+
+
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +66,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/
-     - assets/onboard/
+    - assets/images/
+
+
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
