--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
   google_maps_flutter: ^2.5.3
   location: ^5.0.3
   carousel_slider: ^5.0.0
-
-
+  animate_do: ^3.1.2
+  google_sign_in: ^6.1.6
 
 
 dev_dependencies:
