--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   auto_animated: ^3.2.0
   equatable: ^2.0.7
   font_awesome_flutter: ^10.8.0
+  animated_splash_screen: ^1.3.0
 
 
 
@@ -91,6 +92,7 @@ flutter:
     - assets/images/
     - assets/translations/
     - assets/RiveAssets/
+
 
 
 
