--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   equatable: ^2.0.7
   font_awesome_flutter: ^10.8.0
   animated_splash_screen: ^1.3.0
+  flutter_advanced_drawer: ^1.4.0
 
 
 
