--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   flutter_advanced_drawer: ^1.4.0
   lucide_icons_flutter: ^1.2.8
   flutter_card_swiper: ^7.0.2
+  gradient_borders: ^1.0.1
+  buttons_tabbar: ^1.3.15
 
 
 
