--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   flutter_card_swiper: ^7.0.2
   gradient_borders: ^1.0.1
   buttons_tabbar: ^1.3.15
+  shimmer: ^3.0.0
+  flutter_spinkit: ^5.2.1
 
 
 
@@ -97,6 +99,7 @@ flutter:
     - assets/images/
     - assets/translations/
     - assets/RiveAssets/
+    - assets/fonts/
 
 
 
@@ -114,17 +117,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: pop
+      fonts:
+        - asset: assets/fonts/Poppins/Poppins/Poppins-Thin.ttf
+        - asset: assets/fonts/Poppins/Poppins/Poppins-SemiBold.ttf
+        - asset: assets/fonts/Poppins/Poppins/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins/Poppins/Poppins-Medium.ttf
+        - asset: assets/fonts/Poppins/Poppins/Poppins-ExtraBold.ttf
+        - asset: assets/fonts/Poppins/Poppins/Poppins-Bold.ttf
+
+
+
+    - family: vol
+      fonts:
+       - asset: assets/fonts/Volkhov/Volkhov/Volkhov-Regular.ttf
+       - asset: assets/fonts/Volkhov/Volkhov/Volkhov-Bold.ttf
+
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
