--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   animated_splash_screen: ^1.3.0
   rive_common: ^0.4.15
   rive: ^0.13.20
+  flutter_advanced_drawer: ^1.4.0
+  gradient_borders: ^1.0.1
+  flutter_card_swiper: ^7.0.2
 
 
 dev_dependencies:
