--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,6 @@ dependencies:
   animated_toggle_switch: ^0.8.4
   easy_localization: ^3.0.7+1
   shared_preferences: ^2.5.1
-  rive: ^0.13.20
   chat_bubbles: ^1.6.0
   auto_animated: ^3.2.0
   equatable: ^2.0.7
@@ -67,6 +66,7 @@ dependencies:
   shimmer: ^3.0.0
   flutter_spinkit: ^5.2.1
   dropdown_search: ^6.0.2
+  flutter_typeahead: ^5.2.0
 
 
 
