search & travel filter

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,12 @@ allprojects {
         google()
         mavenCentral()
     }
+
+    configurations.all {
+        resolutionStrategy {
+            force 'androidx.appcompat:appcompat:1.6.1'
+        }
+    }
 }
 
 rootProject.buildDir = '../build'
