--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,13 @@ dependencies:
   flutter_spinkit: ^5.2.1
   dropdown_search: ^6.0.2
   flutter_typeahead: ^5.2.0
+  flutter_keyboard_visibility: ^6.0.0
+  dropdown_button2: ^2.3.9
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  permission_handler: ^11.3.1
+  android_alarm_manager_plus: ^4.0.7
 
 
 
@@ -74,6 +81,7 @@ dependencies:
 dev_dependencies:
   injectable_generator: ^2.6.2
   build_runner: ^2.4.11
+  hive_generator: ^2.0.1
   flutter_test:
     sdk: flutter
 
