--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  path: ^1.8.0
   flutter:
     sdk: flutter
 
@@ -48,27 +47,42 @@ dependencies:
   dartz: ^0.10.1
   pretty_dio_logger: ^1.4.0
   get_it: ^8.0.3
-  injectable: ^2.4.0
+  injectable: ^2.5.0
   webview_flutter: ^3.0.4
   animate_do: ^3.3.4
   animated_toggle_switch: ^0.8.4
   easy_localization: ^3.0.7+1
-  shared_preferences: ^2.3.1
+  shared_preferences: ^2.5.1
   chat_bubbles: ^1.6.0
   auto_animated: ^3.2.0
   equatable: ^2.0.7
   font_awesome_flutter: ^10.8.0
   animated_splash_screen: ^1.3.0
-  rive_common: ^0.4.15
-  rive: ^0.13.20
   flutter_advanced_drawer: ^1.4.0
-  gradient_borders: ^1.0.1
+  lucide_icons_flutter: ^1.2.8
   flutter_card_swiper: ^7.0.2
+  gradient_borders: ^1.0.1
+  buttons_tabbar: ^1.3.15
+  shimmer: ^3.0.0
+  flutter_spinkit: ^5.2.1
+  dropdown_search: ^6.0.2
+  flutter_typeahead: ^5.2.0
+  flutter_keyboard_visibility: ^6.0.0
+  dropdown_button2: ^2.3.9
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  permission_handler: ^11.3.1
+  android_alarm_manager_plus: ^4.0.7
+  google_sign_in: ^6.3.0
+
+
 
 
 dev_dependencies:
   injectable_generator: ^2.6.2
   build_runner: ^2.4.11
+  hive_generator: ^2.0.1
   flutter_test:
     sdk: flutter
 
@@ -95,6 +109,8 @@ flutter:
     - assets/images/
     - assets/translations/
     - assets/RiveAssets/
+    - assets/fonts/
+    - assets/images/google_PNG.png
 
 
 
@@ -112,17 +128,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: pop
+      fonts:
+        - asset: assets/fonts/Poppins/Poppins/Poppins-Thin.ttf
+        - asset: assets/fonts/Poppins/Poppins/Poppins-SemiBold.ttf
+        - asset: assets/fonts/Poppins/Poppins/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins/Poppins/Poppins-Medium.ttf
+        - asset: assets/fonts/Poppins/Poppins/Poppins-ExtraBold.ttf
+        - asset: assets/fonts/Poppins/Poppins/Poppins-Bold.ttf
+
+
+
+    - family: vol
+      fonts:
+        - asset: assets/fonts/Volkhov/Volkhov/Volkhov-Regular.ttf
+        - asset: assets/fonts/Volkhov/Volkhov/Volkhov-Bold.ttf
+
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
