--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   permission_handler: ^11.3.1
   android_alarm_manager_plus: ^4.0.7
   google_sign_in: ^6.3.0
+  favorite_button: ^0.0.4
 
 
 
