--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
   android_alarm_manager_plus: ^4.0.7
+  lottie: ^3.2.0
+  url_launcher: ^6.3.1
 
 
 
@@ -109,6 +111,7 @@ flutter:
     - assets/translations/
     - assets/RiveAssets/
     - assets/fonts/
+    - assets/lottie/
 
 
 
