--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ dependencies:
   google_sign_in: ^6.3.0
   favorite_button: ^0.0.4
   firebase_auth: ^5.5.3
+  firebase_core: ^3.13.0
+  flutter_secure_storage: ^9.2.4
 
 
 
