--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,9 @@ dependencies:
   firebase_auth: ^5.5.3
   firebase_core: ^3.13.0
   flutter_secure_storage: ^9.2.4
+  cloud_firestore: ^5.6.7
+  sign_in_with_apple: ^7.0.1
+  flutter_login_facebook: ^2.0.1
 
 
 
