--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
   chat_bubbles: ^1.6.0
   auto_animated: ^3.2.0
   equatable: ^2.0.7
-  font_awesome_flutter: ^10.8.0
+  font_awesome_flutter: ^9.1.0
   animated_splash_screen: ^1.3.0
   flutter_advanced_drawer: ^1.4.0
   lucide_icons_flutter: ^1.2.8
@@ -79,6 +79,9 @@ dependencies:
   url_launcher: ^6.3.1
   google_sign_in: ^6.2.2
   favorite_button: ^0.0.4
+  animated_radial_menu: ^0.0.1
+  clickable_list_wheel_view: ^0.2.0
+
 
 
 
