--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   favorite_button: ^0.0.4
   animated_radial_menu: ^0.0.1
   clickable_list_wheel_view: ^0.2.0
+  choice: ^2.3.2
 
 
 
