--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,10 @@ dependencies:
   cloud_firestore: ^5.6.7
   sign_in_with_apple: ^7.0.1
   flutter_login_facebook: ^2.0.1
+  flutter_local_notifications: ^19.3.0
+  timezone: ^0.10.1
+  flutter_native_timezone: ^2.0.0
+  awesome_notifications: ^0.10.0
 
 
 
