--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -78,3 +78,9 @@
     </array>
   </dict>
 </array>
+
+<key>UIBackgroundModes</key>
+<array>
+    <string>fetch</string>
+    <string>remote-notification</string>
+</array>
