--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+
+<key>NSLocationWhenInUseUsageDescription</key>
+<string>We need your location to show maps and navigation</string>
+<key>NSCameraUsageDescription</key>
+<string>We need camera access for taking photos</string>
+<key>NSPhotoLibraryUsageDescription</key>
+<string>We need photo library access for selecting images</string>
+<key>NSMicrophoneUsageDescription</key>
+<string>We need microphone access for audio features</string>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>NSLocationWhenInUseUsageDescription</key>
