--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ dependencies:
   flutter_native_timezone: ^2.0.0
   awesome_notifications: ^0.10.0
   mockito: ^5.4.5
+  url_launcher: ^6.3.1
 
 
 
