--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ dependencies:
   wheel_slider: ^1.2.2
   signalr_netcore: ^1.4.3
   jwt_decoder: ^2.0.1
+  flutter_staggered_animations: ^1.1.1
 
 
 dependency_overrides:
