--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ dependencies:
   cached_network_image: ^3.4.1
   signalr_netcore: ^1.4.3
   logger: ^2.6.0
+  flutter_staggered_animations: ^1.1.1
 
 
 
