--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   location: ^5.0.3
   carousel_slider: ^5.0.0
   dio: ^5.7.0
+  http:
   bloc: ^9.0.0
   flutter_bloc: ^9.0.0
   flutter_screenutil: ^5.9.3
